src/styles/main.scss
@import url('https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,700;1,700&family=Jost:wght@400;500&display=swap');

$green: #27300f;
$orange: #d26a22;
$dark-orange: #cf5c0d;
$white: #fff;

$font-jost: 'Jost', sans-serif;
$font-cormorant: 'Cormorant', serif;

$r_minmob: 320px;
$r_mob360: 360px;
$r_mob400: 400px;
$r_mob500: 500px;
$r_tab: 768px;
$r_tab_900: 900px;
$r_desk: 1000px;
$r_desk_1120: 1120px;
$r_desk_hd: 1200px;
$r_desk_1280: 1280px;
$r_desk_1350: 1350px;
$r_desk_1580: 1580px;
$r_desk_full_1750: 1750px;

html {
    font-size: 10px;
    @media (max-width: $r_mob500) {
        font-size: 8px;
    }
}

body{
    font-size: 1.6rem;
    font-family: $font-jost;
    color: $green;
    background-image: url(../images/bckgr_full.png);
    background-size: cover;
    background-repeat: no-repeat;
    overflow: hidden;
}
/* ... */

